<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/tvPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvAmortization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvInterestRate"
        app:layout_constraintEnd_toEndOf="@+id/tvAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <TextView
        android:id="@+id/tvInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvAmortization"
        app:layout_constraintEnd_toEndOf="@+id/tvAmortization"
        app:layout_constraintTop_toBottomOf="@+id/tvAmortization" />

    <EditText
        android:id="@+id/etInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="Annual Rate"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tvAmortization"
        app:layout_constraintStart_toEndOf="@+id/tvAmortization"
        app:layout_constraintTop_toTopOf="@+id/tvAmortization" />

    <EditText
        android:id="@+id/etPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="Principal Amount"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tvAmount"
        app:layout_constraintStart_toEndOf="@+id/tvAmount"
        app:layout_constraintTop_toTopOf="@+id/tvAmount" />

    <EditText
        android:id="@+id/etAmortization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="Number of Years"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvInterestRate"
        app:layout_constraintStart_toEndOf="@+id/tvInterestRate"
        app:layout_constraintTop_toTopOf="@+id/tvInterestRate" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmortization" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tvError"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>